fix: #993: adjust/reduce z-indexes for modals

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -83,6 +83,6 @@ $zindex: (
   header: 1040,
   notification: 1100,
   loader: 5000,
-  overlay: 10000,
-  popup: 100000,
+  modal_bg: 10000,
+  modal: 10020,
 )
